--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "AndoverCharter2022",
-  "version": "0.4npm.0",
+  "version": "0.4.0",
   "description": "Online version of Andover's charter, 2022 edition",
   "main": "index.js",
   "scripts": {
